--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,53 @@
+header{
+    background-image: linear-gradient(to bottom, black, transparent, black), url('/styles/images/sukuna-domain-expansion.gif');
+    background-size: 100%;
+    height: 60vh;
+    padding: 0;
+    margin: 0;
+}
+img {
+    border-radius: 50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+body{
+    background-color: black;
+}
+h1, h2{
+    text-align: center;
+    font-size:500%;
+    color: white;
+    height: 15vh;
+    padding: 50px 0;
+}
+h2{
+    font-size: 300%;
+}
+h3{
+    text-align: center;
+    font-size: 225%;
+    color: white;
+}
+div{
+    margin: auto;
+    width: 50%;
+    padding: 5px;
+    text-align: center;
+}
+ul{
+    display: inline-block;
+    text-align: left;
+    color: white;
+}
+ol{
+    text-align: left;
+    color: white;
+}
 table{
+    margin-left: auto;
+    margin-right: auto;
     width: 40%;
     border-collapse: collapse;
     margin-top: 20px
